force-app/main/default/objects/LMS_Audit_Log__c/LMS_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>LMS Audit Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LMS Audit Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>