force-app/main/default/objects/LMS_Audit_Log__c/fields/LMS_Action__c.field-meta.xml
<CustomField>
    <fullName>LMS_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>