force-app/main/default/objects/LMS_Audit_Log__c/fields/LMS_Actor__c.field-meta.xml
<CustomField>
    <fullName>LMS_Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LMS Audit Logs</relationshipLabel>
    <relationshipName>LMS_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>