force-app/main/default/objects/LMS_Audit_Log__c/fields/LMS_Details__c.field-meta.xml
<CustomField>
    <fullName>LMS_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>