force-app/main/default/objects/LMS_Audit_Log__c/fields/LMS_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>LMS_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>